--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
+    "vue-i18n": "^11.0.1",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
