Fixed wrong main branch (`main` -> `master`) in deploy workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Simulation to GitHub Pages
 on:
   push:
     branches:
-      - main  # Change to your default branch if needed
+      - master  # Change to your default branch if needed
 
 jobs:
   build-and-deploy:
